perbaikan link wa

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <footer>
         <p>&copy;2024 Warung Seblak Mantul. Semua Hak Dilindungi.</p>
         <div>
-            <a href="https://web.whatsapp.com/083896794622" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://wa.me/083896794622" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
             <a href="https://www.instagram.com/muhamadarifinilham24/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://www.facebook.com/Arifin.Ilham.007" target="_blank"><i class="fa-brands fa-facebook"></i></a>
         </div>
